--- a/css/index.css
+++ b/css/index.css
@@ -1,18 +1,79 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
-.row { max-width: 1200px; margin: 0 auto; padding: 0 10px; }
-body { color: #666;
-    font-family: 'Noto Sans KR', sans-serif;
-    font-size: 15px; }
+body{font-family: 'Noto Sans KR', sans-serif; color:#666; font-size:15px }
+.row{max-width: 1200px; margin:0 auto; padding:0 10px}
 
-/* -----header----- */
-#header {
+#header .top_menu {
+    background: #f3f3f3; color: #999; font-size: 12px; text-align: right;
+}
+#header .top_menu a {
+    padding: 7px 20px;
+    display: inline-block;
+    border-right : 1px solid #e3e3e3;
+}
+#header .top_menu a:first-child { border-left: 1px solid #e3e3e3;}
+#header .top_menu a:hover { color: #dbb075; }
+/* 블록요소들을 한줄로 정렬하는 방법 :
+    1. 둘다 float정렬 : 부모한테 .cf나 overflow:hidden
+    2. 둘 중에 높이가 낮은 자식을 position:absolute 정렬 : 부모한테 position:relative */
+#header > .row {
+    position: relative;
+}
+#header h1 {
+    /* float: left; */
+    padding: 25px 0;
+}
+#header #nav {
+    /* float: right; */
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 0;
+    font-size: 18px;
+    color: #1e1e1e;
+    z-index: 99999;
+}
+#header #nav .depth1 > li {
+    float: left;
+    position: relative;
+}
+
+/* a 태그에 padding값 줄때는 display:inline-block도 항상 같이 쓰세요. */
+#header #nav .depth1 > li > a {
+    padding: 20px 40px;
+    display: inline-block;
+}
+#header #nav .depth1 > li:hover > a {
+    color: #00529b;
+}
+#header .depth2 {
+    position: absolute;
+    top: 100%; left: 0;
+    background: #555;
+    font-size: 14px;
+    color: #fff; width: 100%; text-align: center;
+    display: none;
+}
+#header #nav .depth1 > li:hover .depth2 {
+    display: block;
+}
+#header .depth2 > li > a {
+    padding: 18px 0; display: block;
+    border-bottom: 1px solid #999;
+}
+#header .depth2 > li:last-child > a {
+    border-bottom: none;
+}
+#header .depth2 > li:hover > a {
+    background: #00529b; color: #dfe9fe;
+}
+
+/* #header {
     z-index: 99;
     position: fixed;
     width: 100%;
     top:0; left:0; background: #fff;
 }
-/* login */
 #header .login {
     background: #f3f3f3;
     color : #999;
@@ -29,7 +90,6 @@ body { color: #666;
     padding: 2px 10px;
 }
 
-/* logo, nav */
 #header h1 {
     float: left;
     width: 40%;
@@ -42,7 +102,6 @@ body { color: #666;
     font-size: 18px;
     color: #1e1e1e;
 }
-/*  */
 #header nav .depth1 > li {
     float: left;
     width : 20%;
@@ -75,13 +134,55 @@ body { color: #666;
 .depth2 li:hover {
     background: #00529b;
     color: #dfe9fe;
-}
+} */
 
 /* -----section----- */
-#section { margin-top: 126px; }
+/* #section { margin-top: 126px; } */
 /* ------------------ */
 /* -----article1----- */
-.slide1 {
+.article1 .slide1 { height: 650px;
+    background: url(../img/main_img1.jpg) no-repeat center;
+    background-size: cover; position: relative;
+}
+.article1 .slide2 { height: 650px;
+    background: url(../img/main_img2.jpg) no-repeat center;
+    background-size: cover; position: relative;
+    display: none;
+}
+.article1 .slide3 { height: 650px;
+    background: url(../img/main_img3.jpg) no-repeat center;
+    background-size: cover; position: relative;
+    display: none;
+}
+.article1 .slide_text {
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff; text-align: center;
+}
+.article1 .slide_text h2 {
+    font-size: 42px;
+    line-height: 50px;
+    font-weight: 800;
+}
+.article1 .slide_text p {
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+    margin: 30px 0;
+}
+.article1 .slide_text a {
+    display: inline-block;
+    padding: 10px 35px;
+    border: 1px solid #fff;
+    font-size: 15px;
+    font-weight: 400;
+}
+.article1 .slide_text a:hover {
+    background: rgba(255,255,255,0.3);
+}
+/* .slide1 {
     background: url(../img/main_img3.jpg);
     height: 650px;
     background-size: cover;
@@ -104,10 +205,69 @@ body { color: #666;
     font-size: 15px;
     padding: 8px 35px;
     border: 1px solid #fff;
-}
+} */
 /* ------------------ */
 /* -----article2----- */
-.we {
+#section h2 {
+    color: #000;
+    font-size: 36px;
+    line-height: 42px;
+    font-weight: 700;
+    padding: 80px 0 10px;
+    text-align: center;
+}
+.article2 >p, .article4 > p {
+    padding-bottom: 40px;
+    text-align: center;
+}
+.article2 li {
+    height: 520px;
+    float: left;
+    width: 24%;
+    margin-right: 1.3333%;
+    color: #fff;
+    position: relative;
+}
+.article2 li:nth-child(1) {
+    background: url(../img/what1.jpg) no-repeat center;
+    background-size: cover;
+}
+.article2 li:nth-child(2) {
+    background: url(../img/what2.jpg) no-repeat center;
+    background-size: cover;
+}
+.article2 li:nth-child(3) {
+    background: url(../img/what3.jpg) no-repeat center;
+    background-size: cover;
+}
+.article2 li:nth-child(4) {
+    background: url(../img/what4.jpg) no-repeat center;
+    background-size: cover;
+    margin-right: 0;
+}
+.article2 li > div {
+    position:absolute; bottom: 25px; left:25px; right: 25px;
+}
+.article2 li > div > h3 {
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 500;
+}
+.article2 li > div > p {
+    padding: 20px 0;
+    line-height: 1.5; font-size: 14px;
+}
+.article2 li > div > a {
+    display: inline-block;
+    padding: 10px;
+    border: 1px solid rgba(255,255,255,0.5);
+    font-size: 11px;
+    font-weight: 600 !important;
+}
+.article2 li > div > a:hover {
+    background: rgba(255,255,255,0.3);
+}
+/* .we {
     text-align: center;
 }
 .we .wetext h2 {
@@ -118,7 +278,7 @@ body { color: #666;
 }
 .we .wetext p { font-size: 14px; padding: 0 0 50px 0;}
 
-/* info */
+
 .we .info {
     color: #fff;
     text-align: left;
@@ -140,30 +300,43 @@ body { color: #666;
 }
 .we .dtext { padding: 300px 0 0 0; }
 
-/* detail1 */
+
 .detail1 {
     background: url(../img/what1.jpg) no-repeat;
     height: 516px; 
 }
-/* detail2 */
+
 .we .info .detail2 {
     background: url(../img/what2.jpg) no-repeat;
     height: 516px;
 }
-/* detail3 */
+
 .we .info .detail3 {
     background: url(../img/what3.jpg) no-repeat;
     height: 516px;
-    height: 516px;
 }
-/* detail4 */
+
 .we .info .detail4 {
     background: url(../img/what4.jpg) no-repeat;
     height: 516px;
-}
+} */
 /* ------------------ */
 /* -----article3----- */
-#article3 {
+.article3 { height: 304px;
+    background: url(../img/intro_bg.jpg) no-repeat center top;
+    background-size: auto;
+    background-attachment: fixed; /* 패럴렉스 이미지 */
+    margin-top: 100px;
+    color: #fff;
+    text-align: center;
+}
+.article3 h2 { color: #fff !important; }
+.article3 p { padding: 15px 0 25px; }
+.article3 a { font-size: 13px; padding: 10px 30px; display: inline-block;
+    border: 1px solid rgba(255,255,255,0.5);
+}
+.article3 a:hover { background: rgba(255,255,255,0.3);}
+/* #article3 {
     position: relative;
     margin-top: 80px;
 }
@@ -191,10 +364,26 @@ body { color: #666;
     border: 1px solid #fff;
     padding: 8px 30px;
     font-size: 13px;
-}
+} */
 /* ------------------ */
 /* -----article4----- */
-#article4 { background: #f3f3f3; }
+.article4 li {
+    float: left; width: 32%;
+    margin-right: 2%;
+    margin-bottom: 20px;
+    border: 1px solid #999;
+    text-align: center;
+}
+/* .article4 li:nth-child(3), li:nth-child(6) { margin-right:0; } */
+.article4 li:nth-child(3n) { margin-right:0; }
+/* margin값이 상하로 만나면 둘 중에 큰 값 하나만 적용 */
+.article4 li h4 { font-size: 17px; margin: 25px; font-weight: bold; }
+.article4 li p { font-size: 14px; margin: 25px; line-height: 1.5; }
+.article4 li img { transition: all 0.5s;}
+.article4 li img:hover { opacity: 0.6; }
+
+
+/* #article4 { background: #f3f3f3; }
 .a4text {
     text-align: center;
 }
@@ -231,10 +420,41 @@ body { color: #666;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-}
+} */
 
 /* -----footer----- */
 #footer {
+    margin-top:80px;
+    background: #333;
+    padding: 30px 0px;
+    text-align: center;
+    font-size: 12px;
+    line-height: 18px;
+    color:#fff;
+}
+#footer .sns a { font-size: 14px; display: inline-block;
+    width: 32px; height: 32px; line-height: 32px;
+    background: rgba(255,255,255,0.1);
+    border-radius: 50%; transition: all 0.3s;
+}
+#footer .sns a:hover { background: rgba(255,255,255,0.3); }
+
+#footer .info { padding: 20px 0;}
+#footer .info span { padding: 5px 20px; }
+#footer .privacy a {
+    font-size: 11px; padding: 3px 10px;
+    display: inline-block;
+    border: 1px solid rgba(255,255,255,0.5);
+    color: #bbb; transition: all 0.4s;
+}
+#footer .privacy a:hover {
+    background: #999;
+    border: 1px solid #999;
+    color: #FFF;
+}
+
+
+/* #footer {
     text-align: center;
     color: #ddd;
     background: #333;
@@ -253,4 +473,4 @@ body { color: #666;
     border: 1px solid #fff;
     padding: 3px 10px;
     font-size: 11px
-}
+} */
