--- a/css/index.css
+++ b/css/index.css
@@ -1,342 +1,273 @@
-@charset "utf-8";
+@charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 
-.row {max-width:1000px; margin:0 auto; padding:0 10px;}
-body {color: #555; }
+body{font-family: 'Noto Sans KR', sans-serif; color:#666; font-size:15px }
+.row{max-width: 1200px; margin:0 auto; padding:0 10px }
+#header .top_menu { background:#f3f3f3; color:#999; font-size:12px; text-align:right; }
+#header .top_menu a { padding:7px 20px; display:inline-block; border-right:1px solid #e3e3e3; }
+#header .top_menu a:first-child { border-left:1px solid #e3e3e3; }
+#header .top_menu a:hover { color: #dbb075; }
+
+/* 블록요소들을 한줄로 정렬하는 방법 : 
+   1. 둘다 float정렬 : 부모한테 .cf나 overflow:hidden
+   2. 둘 중에 높이가 낮은 자식을 position:absolute 정렬 : 부모한테 position:relative */
+#header > .row { position:relative; }
+#header h1 { /* float:left;  */ padding:25px 0 }
+
+#header .open,
+#header .close { display: none; }
+
+#header #nav {  /* float:right; */ z-index:99999;
+    position:absolute; top:50%; transform:translateY(-50%);
+    right:0; font-size:18px; color:#1e1e1e; /* background:red; */ }
+#header #nav .depth1 > li { float:left; position:relative; }
+#header #nav .depth1 > li > a { padding:20px 40px; display:inline-block; }
+#header #nav .depth1 > li.on > a { color: #00529b; }
 
 
-/* header */
-#header { border-bottom:0px solid #ddd }
-#header > div { max-width:1200px; margin:0 auto; position:relative; }
-#header h1 { padding:20px 0; margin-left:70px }
-/* 블록요소들을 한줄로 정렬할때 float 정렬 대신 position:absolute를 사용할 때는
-  둘중에 키가 작은 요소에 적용한다.
-*/
-#header .open { display: none;}
-#header .nav { position:absolute; top:13px; right:30px; z-index:9999; }
-#header .nav .depth1 > li { float:left; position:relative }
-#header .nav .depth1 > li > a { 
-    display:block; padding:30px 45px;
-    font-size:17px; text-align:center;
-    font-weight:bold
-}
-#header .nav .depth1 > li.on > a { 
-    color:#397dda
-}
-.depth2 { position:absolute; top:100%; width:140%;
-    left:50%; transform:translate(-50%);
-    text-align:center; background:#fff; font-size:12px;
-    height:0; overflow:hidden; 
-    transition:all 0.5s;
-}
-#header .nav .depth1 > li:nth-child(1).on .depth2 {
-    height:76px; 
-}
-#header .nav .depth1 > li:nth-child(2).on .depth2 {
-    height:76px; 
-}
-#header .nav .depth1 > li:nth-child(3).on .depth2 {
-    height:38px; 
-}
-#header .nav .depth1 > li:nth-child(4).on .depth2 {
-    height:38px; 
-}
-#header .nav .depth1 > li:nth-child(5).on .depth2 {
-    height:114px; 
-}
+#header .depth2 { position:absolute; top:100%; left:0; 
+    background:#555; font-size:14px;
+    color:#fff; width:100%; text-align:center; 
+    display:none; }
 
-#header .nav .depth2 > li > a { 
-    display:block; padding:13px 0px; font-weight:bold; 
-}
-#header .nav .depth2 > li:hover > a { 
-    background:#397dda; color:#fff;
-}
+#header #nav .depth1 > li.on > .depth2 { display:block; }
 
-/* section */
-/* .article1 .slide { } */
-.article1 .slide_group {
-    position:relative
-}
-.article1 .slide_group .slick-arrow {
-    position:absolute; 
-    top:50%; transform:translateY(-50%);
-    background:none;
-    border:none; z-index:9999; 
-    font-size:80px;
-    color:#fff; 
-}
-.article1 .slide_group .prev { left:100px }
-.article1 .slide_group .next { right:100px }
-.article1 .slide_group .slick-dots { 
-    position:absolute; bottom:50px; left:50%; transform:translate(-50%); 
-}
-/* 동그라미 버튼
- .article1 .slide_group .slick-dots li { 
-    display:inline-block; margin:0 5px;
-}
-.article1 .slide_group .slick-dots li button {     
-    width:20px; height:20px;
-    border-radius:50%; 
-    background:rgba(255,255,255,0.5);
-    border:none; text-indent:-9999px; overflow:hidden;
-    outline:none;
-}
-.article1 .slide_group .slick-dots li.slick-active button {     
-    background:rgba(255,255,255,1);
-} */
+#header .depth2 > li > a { padding:18px 0; display:block; 
+    border-bottom:1px solid #999; }
+#header .depth2 > li:last-child > a { border-bottom:none }
+#header .depth2 > li:hover > a { background:#00529b; color:#dfe9fe }
 
-/* 막대버튼 애니메이션 */
- .article1 .slide_group .slick-dots li { 
-    display:inline-block; margin:0 5px;
-    width:100px; height:2px; background:#999;
-    position:relative; }
-.article1 .slide_group .slick-dots li button {     
-    width:0px; height:2px;
-    background:#f00;
-    border:none; text-indent:-9999px; overflow:hidden;
-    outline:none;
-    position:absolute; top:0; left:0; }
-.article1 .slide_group .slick-dots li.slick-active button {  
-   animation:barani 3s both; }
-@keyframes barani {
-    0% { width:0px }
-    100% { width:100px }
-}
-
-/* 슬라이드 자동재생/멈춤 버튼 */
 .article1 { position:relative }
-.article1 .playstop {
-    position:absolute; bottom:45px; left:50%; 
-    color:#fff; background:none; border:none; 
-    transform:translate(225px) scale(1.3);
+.article1 .slide-group { position:relative }
+.article1 .plpa {
+    position: absolute; bottom: 44px; left: 50%;
+    /* margin-left: 170px; */
+    transform: translate(180px);
+    color: #fff; border: none; background: none; font-size: 20px;
+}
+.article1 .slide-group .slick-arrow {
+    position:absolute; top:50%; transform:translateY(-50%);
+    background:none; border:none;
+    color:#fff; font-size:70px;
+}
+.article1 .slide-group .prev { left:50px; z-index:9999; }
+.article1 .slide-group .next { right:50px; }
+.article1 .slide-group .slick-dots {
+    position:absolute; bottom:50px; width:100%; text-align:center;
+}
+.article1 .slide-group .slick-dots li {
+    display:inline-block; margin:0 5px
+}
+.article1 .slide-group .slick-dots li button {
+    width:100px; height:10px; background:#fff;
+    border:none; color:transparent; vertical-align:middle;
+}
+.article1 .slide-group .slick-dots li.slick-active button {
+    border:2px solid #fff; background:none
 }
 
 
-.article1 .slide_group .slide1 {
-    height:750px; 
-    background:url(../img/main01.jpg) no-repeat center;
-    background-size:cover; 
-    position:relative;
+.article1 .slide1 { height:650px;
+    background:url(../img/main_img1.jpg) no-repeat center;
+    background-size:cover; position:relative; }
+.article1 .slide2 { height:650px;
+    background:url(../img/main_img2.jpg) no-repeat center;
+    background-size:cover;  position:relative;
+     }
+.article1 .slide3 { height:650px;
+    background:url(../img/main_img3.jpg) no-repeat center;
+    background-size:cover;  position:relative;
+     }
+.article1 .slide_text { position:absolute; top:35%;left:50%;
+    transform:translate(-50%, -50%); color:#fff; text-align:center;} 
+.article1 .slide.slick-cloned .slide_text { opacity:0 } 
+
+.article1 .slide_text h2 { font-size: 42px;line-height: 50px;
+    font-weight: 800; }
+.article1 .slide.slick-active .slide_text h2 { 
+    animation:fadeInDown 0.5s both 0.3s;
  }
- .article1 .slide_group .slide2 {
-    height:750px; 
-    background:url(../img/main02.jpg) no-repeat center;
-    background-size:cover; 
-    position:relative;
- }
- .article1 .slide_group .slide3 {
-    height:750px; 
-    background:url(../img/main03.jpg) no-repeat center;
-    background-size:cover; 
-    position:relative;
- }
- .article1 .slide_group .slide4 {
-    height:750px; 
-    background:url(../img/main04.jpg) no-repeat center;
-    background-size:cover; 
-    position:relative;
- }
-/* .article1 .slide_group .slide1 .txt {  
-    position:absolute;
-    top:50%; left:50%;
-    transform:translate(-50%, -50%);
-    text-align:center;
-    color:#fff; opacity:0;
-} */
-.article1 .slide_group .slide .txt {  
-    position:absolute;
-    top:50%; left:50%;
-    transform:translate(-50%, -50%);
-    text-align:center;
-    color:#fff; 
+.article1 .slide_text p {font-size: 16px;line-height: 24px;
+    font-weight: 400;margin:30px 0; }
+.article1 .slide.slick-active .slide_text p {
+    animation:fadeInRight 0.5s both 0.8s;
+}    
+.article1 .slide_text a { display: inline-block; padding: 10px 35px;
+    border: 1px solid #FFF; font-size: 15px; font-weight: 400;}
+.article1 .slide.slick-active .slide_text a { 
+    animation:zoomIn 0.5s both 0.3s;
 }
-.article1 .slide_group .slide.slick-cloned .txt {  
-    opacity:0
-}
-.article1 .slide_group .slide.slick-cloned .txt {  
-    opacity:0;
-}
-.article1 .slide_group .slide .txt h2 { 
-    font-size:50px; font-weight:bold; 
-    text-shadow:0px 0px 4px #555;
-    margin-bottom:25px;
-}
-.article1 .slide_group .slide.slick-active .txt h2 { 
-    animation:fadeInDown 0.5s both 0.6s;
-}
-.article1 .slide_group .slide .txt p { 
-    font-size:17px; line-height:1.8;
-    font-weight:bold; 
-    text-shadow:0px 0px 4px #555;
-}
-.article1 .slide_group .slide.slick-active .txt p { 
-    animation:fadeInUp 0.5s both 0.6s;
-}
+/* a버튼에 호버하면 배경색 background: rgba(255,255,255,0.3); */
+.article1 .slide_text a:hover {background: rgba(255,255,255,0.3);}
 
 
-/* COMPANY INTRODUCE 구역 */
-.article2 { padding-top:61px; padding-bottom:61px }
-#section .title2 { text-align: center; 
-    color: #555555; font-size: 35px;
-    font-weight: 600; line-height: 50px;
+
+
+#section h2 { color: #000; font-size: 36px; line-height: 42px; font-weight: 700;
+    padding:80px 0 10px; text-align:center; }
+.article2 > p, .article4 > p  { padding-bottom: 40px; text-align:center; }
+.article2 li { height:520px; float:left; width:24%; margin-right:1.3333%; color:#fff;
     position:relative; }
-#section .title2::before { 
-    content:'';
-    width:100px; height:1px; background:#397dda;
-    position:absolute; top:0px; 
-    left:50%; transform:translate(-50%); }
-#section .comment {
-    text-align: center; color: #777777;
-    font-size: 15px; font-weight: 400;
-    line-height: 25px; padding-top: 19px; }
+.article2 li::before { content:'';
+    position:absolute; top:0; bottom:0; right:0; left:0;
+    background:rgba(0,0,0,0.5); opacity:0; transition:all 0.4s
+}   
+.article2 li:hover::before {  opacity:1; }    
+.article2 li:nth-child(1) { background:url(../img/what1.jpg) no-repeat center;
+    background-size:cover; }
+.article2 li:nth-child(2) { background:url(../img/what2.jpg) no-repeat center;
+    background-size:cover; }
+.article2 li:nth-child(3) { background:url(../img/what3.jpg) no-repeat center;
+    background-size:cover; }
+.article2 li:nth-child(4) { background:url(../img/what4.jpg) no-repeat center;
+    background-size:cover; margin-right:0; }
+.article2 li > div { position:absolute; bottom:25px; left:25px; 
+    right:25px; transition:all 0.4s }
+.article2 li:hover > div { bottom:100px;  }
 
-.article2 ul li {
-    float:left;
-    width:23%;
-    text-align:center; 
-    margin-right:2.6666%;
-    margin-top:60px; 
+.article2 li > div > h3 { font-size: 24px; line-height: 32px; font-weight: 500; }
+.article2 li > div > p { padding: 20px 0; line-height:1.5; font-size:14px; }
+.article2 li > div > a {  display: inline-block; padding: 10px 40px;
+    border: 1px solid rgba(255,255,255,0.5); font-size: 11px; font-weight: 600 !important;
 }
-.article2 ul li:nth-child(4) { 
-    margin-right:0%;
+.article2 li > div > a:hover {background: rgba(255,255,255,0.3);}
+
+.article3 { height:304px;
+    background:url(../img/intro_bg.jpg) no-repeat center top;
+    background-size:cover;
+    background-attachment: fixed; /* 패럴렉스 이미지 : 스크롤시 배경이미지 고정스타일 */
+    margin-top:100px; 
+    color:#fff;
+    text-align:center;
 }
-.article2 ul li > div { 
-    background:#323232;
+.article3 h2 { color:#fff !important; }
+.article3 p { padding: 15px 0 25px;}
+.article3 a { font-size:13px; padding:10px 30px; display:inline-block;
+    border: 1px solid rgba(255,255,255,0.5);
+}
+.article3 a:hover {background: rgba(255,255,255,0.3);}
+
+.article4 li {
+    float:left; width:32%;
+    margin-right:2%;
+    margin-bottom:20px; 
+    border:1px solid #999;
+    text-align:center;
+}
+.article4 li:nth-child(3n) { margin-right:0 }
+
+/* margin값이 상하로 만나면 둘 중에 큰 값 하나만 적용 */
+.article4 li h4 { font-size:17px; margin:25px; font-weight:bold }
+.article4 li p { font-size:14px; margin:25px; line-height:1.5 }
+.article4 li > div { overflow:hidden; position:relative; }
+.article4 li > div::before {
+    content:''; position:absolute; top:0; left:0; 
+    bottom:0; right:0; background:rgba(0,0,0,0.5);
+    opacity:0; transition:all 0.4s; }
+.article4 li > div:hover::before { opacity:1; z-index:9 }
+.article4 li .zoom { position:absolute; top:50%;
+left:50%; transform:translate(-50%, -50%); 
+font-size:30px; color:#fff; opacity:0; transition:all 0.4s 0.2s; }
+.article4 li > div:hover .zoom { opacity:1;  z-index:10 }
+.article4 li img {  transition:all 0.5s; }
+/* 호버시 ::before나 ::after 박스가 중간에 생기면 
+마우스가 이미지를 가리킬 수 없으므로, 부모한테 호버했을때
+이미지 스케일이 커지도록 함 */
+.article4 li > div:hover > img { transform:scale(1.2) }
+
+
+/* article5 구역 */
+.article5 { padding:30px 0; margin-top:50px; border-top:1px solid #ddd }
+.article5 .row { overflow:hidden }
+.article5 .row > div { width:33.33%; float:left; }
+.article5 .row > div.cs_board { padding-right:30px; }
+.cs_board .tabmenu { overflow:hidden; border-bottom:1px solid #ddd }
+.cs_board .tabmenu li { float:left; 
+    border:1px solid #ddd; border-bottom:none;
+    padding:10px 20px; cursor:pointer;
+}
+.cs_board .tabmenu li.active {
+    background:#ddd; color:orangered;
+}
+.cs_board .contents > div { display:none }
+.cs_board .contents > div.active { display:block }
+.cs_board .contents table { font-size:14px;  }
+.cs_board .contents col:nth-child(1) { width:auto }
+.cs_board .contents col:nth-child(2) { width:100px }
+.cs_board .contents td { border-bottom:1px solid #ddd;
+    padding:9px 5px; }
+.cs_board .contents td:nth-child(1) {
+    white-space:nowrap; overflow:hidden;
+    text-overflow: ellipsis; }
+.cs_board .contents td:nth-child(2) {  text-align:right } 
+.cs_board .contents { position:relative }
+.cs_board .contents .more {
+    position:absolute; bottom:100%; right:0; 
+    padding:5px; background:#ddd; margin-bottom:5px;
+    border-radius:3px; 
+}
+
+
+.article5 .row > div.cs_center { border-left:1px solid #ddd;
+    border-right:1px solid #ddd; padding:0 30px; }
+.article5 .row > div.cs_center h4 {color:#000; font-size:20px; line-height:28px; padding-bottom:15px; font-weight:500;}
+.article5 .cs_center li {font-size:13px; line-height:20px; padding-left:10px; margin:2px 0; text-indent:0px; position:relative; }
+.article5 .cs_center li::before {content:""; width:3px; height:3px; background:#666; border-radius:50%; position:absolute; left:0; top:50%; transform:translateY(-50%)}
+.article5 .cs_center li a {text-indent:0px;}
+.article5 .cs_center li.tel_num {color:#ed5c20; font-size:30px; line-height:36px; font-weight:700; font-family:'Montserrat',sans-serif; padding-bottom:10px; padding-left:0px }
+.article5 .cs_center li.cs-btn::before, 
+.article5 .cs_center li.tel_num::before {display:none;}
+.article5 .cs_center li.cs-btn {padding-top:20px !important; padding:0; text-indent:0; margin:0; font-size:0; text-align:center;}
+.article5 .cs_center li.cs-btn a {
+    display: inline-block; width: 46%; margin: 1%;
+    border-radius: 3px; padding: 10px; font-size: 14px;
+    text-align: center; color: #FFF; }
+.article5 .cs_center li.cs-btn a.cs-btn {
+    background: #787878; }
+.article5 .cs_center li.cs-btn a.cs-btn2 {
+    background: #001f60; }
+.article5 .cs_center li.tel_num i {
+    transform:rotateY(180deg) scale(0.7); }
+
+
+.article5 .row div.cs_movie { padding-left:30px; }
+/* 유튜브 동영상 스타일 공식 */
+.article5 .cs_movie .tubewrap {
+    width:100%; padding-top:56.25%; 
+    position:relative; 
+}
+.article5 .cs_movie .tubewrap iframe {
+    position:absolute; top:0; left:0;
+}
+
+
+
+
+
+
+#footer { margin-top:0px; background: #333;
+    padding: 30px 0px; text-align: center;
+    font-size: 12px; line-height: 18px;
+    color:#ddd; }
+#footer .sns a { font-size:14px; display:inline-block;
+    width:32px; height:32px; line-height:32px;
+    background:rgba(255,255,255,0.1);
+    border-radius:50%;
+    margin:0 5px; transition:all 0.3s }
+#footer .sns a:hover {
+    background:rgba(255,255,255,0.3);
+}
+
+#footer .info { padding:20px 0px }
+#footer .info span { padding:5px 20px; }
+#footer .privacy a {
+    font-size:11px; padding:3px 10px;
     display:inline-block;
-    border-radius:50%; 
-    overflow:hidden;
-    transition:all 0.3s ease-out;
+    border: 1px solid rgba(255,255,255,0.5);
+    color:#bbb; transition:all 0.4s;
 }
-.article2 ul li > div:hover { 
-    background:#fe0000;
-    transition:all 0.3s ease-in;
+#footer .privacy a:hover {
+    background: #999;
+    border: 1px solid #999;
+    color: #FFF;
 }
-.article2 ul li > h3 {
-    color: #424242;
-    font-size: 17px;
-    font-weight: 600;
-    line-height: 22px;
-    text-align: center;
-    padding-top: 35px;
-}
-.article2 ul li > p {
-    color: #777777;
-    font-size: 12px;
-    line-height: 20px;
-    text-align: center;
-    padding-top: 15px;
-    padding-bottom: 18px;
-    padding-left:10px;
-    padding-right:10px;
-    letter-spacing: -1px;
-}
-.article2 ul li > a {
-    display:inline-block;
-    color: #1e1e1e;
-    font-size: 12px;
-    padding: 10px 46px 10px 46px;
-    border: 1px solid #1e1e1e;
-}
-
-/* BUSINESS INDUSTRY 구역 */
-.article3 {
-    background:url(../img/bg_business.jpg) no-repeat center;
-    background-size:cover; 
-    color:#fff; 
-    padding-top:61px;
-    padding-bottom:61px; 
-}
-#section .article3 .title2 { color:#fff }
-#section .article3 .comment { color:#fff }
-#section .article3 .title2::before { 
-    background:#fff; }
-
-.article3 ul li {
-    float:left; width:30.33%;
-    margin-right:4.505%;
-    margin-top:60px;
-    text-align:center; 
-}    
-.article3 ul li:nth-child(3) {
-    margin-right:0%;
-}    
-.article3 .imgbox {
-    position:relative; overflow:hidden;
- }
-.article3 .imgbox::before {
-    content:'';
-    position:absolute; top:0; left:0; bottom:0; right:0;
-    background:rgba(0,0,0,0);
-    transition:all 0.5s; z-index:1
- } 
- .article3 .imgbox:hover::before {
-    background:rgba(0,0,0,0.5); 
- } 
-.article3 .imgbox .sbox {
-    position:absolute; z-index:2;
-    top:50%; left:50%;
-    transform:translate(-50%, -50%);
-    opacity:0; transition:all 0.5s; 
- }
- .article3 .imgbox:hover .sbox {
-    opacity:1; 
- }
- .article3 .imgbox .sbox p:nth-child(1)
- {
-    font-size: 14px;
-    font-weight: 600;
-    line-height: 22px;
- }
- .article3 .imgbox .sbox p:nth-child(2)
-{
-    font-size: 13px;
-    line-height: 20px;
-    padding-top: 15px;
-    padding-bottom: 18px;
-}
-
-.article3 .imgbox img {
-    transition:all 0.5s;
-} 
-.article3 .imgbox:hover img {
-    transform:scale(1.4);
-}
-.article3 .txtbox 
-{
-    font-size: 14px;
-    font-weight: 600;
-    line-height: 22px;
-    background:#397dda;
-    padding:15px 28px;
-}
-.article3 .txtbox p:nth-child(2)
-{
-    font-size: 13px;
-    font-weight: 600;
-    line-height: 20px;
-    background:#397dda;
-    padding-top:20px;
-}
-.article4 { padding-top:61px;  }
-.article4 .map { height:270px; margin-top:20px }
-
-
-/* footer */
-#footer {background: #303030; padding: 25px 0 15px;
-    text-align: center; color: #8d8b8b; font-size: 12px;}
-#footer p:nth-child(1) a { font-weight: bold; display: inline-block;
-    font-size: 13px; color: #ccc; padding: 0px 3px 0px 8px;
-}
-#footer p:nth-child(2) {margin-top: 17px; margin-bottom: 9px;
-    line-height: 1.6;}
-
-.gotop a {
-    position: fixed;
-    bottom: 15%; right: 10%;
-    color: #fff;
-    background-color: rgba(0,0,0,0.7);
-    display: inline-block;
-    width: 42px; height: 42px;
-    text-align: center; line-height: 42px;
-    font-size: 12px;
-}
-.gotop a:hover {background: orange;}
