--- a/css/rwdindex.css
+++ b/css/rwdindex.css
@@ -1,85 +1,53 @@
 @media screen and (max-width:1024px) {
 
-    #header .open { display: block;
-        position: absolute; top: 50%; right: 30px;
-        width: 22px;
-        height: 18px;
-        margin-top: -9px;
-        /* transform: translateY(-50%); */
-    }
-    #header .open.on {
-        margin-top: -2px;
-    }
-
-    #header .open span:nth-child(2),
-    #header .open span:nth-child(3),
-    #header .open span:nth-child(4) {
-        position: absolute;
-        border-radius: 10px;
-        width: 100%;
-        height: 3px;
-        background: #555;
-    }
-    #header .open span:nth-child(2) {
-        top: 0; transition: all 0.3s;
-    }
-    #header .open.on span:nth-child(2) {
-        bottom: 0; transform: rotate(45deg);
-    }
-    
-    #header .open span:nth-child(3) {
-        top: 50%; transform: translateY(-50%);
-        opacity: 1; transition: all 0.3s;
-    }
-    #header .open.on span:nth-child(3) {
-        top: 50%; transform: translateY(-50%);
-        opacity: 0;
-    }
-    #header .open span:nth-child(4) {
-        bottom: 0px; transition: all 0.3s;
-    }
-    #header .open.on span:nth-child(4) {
-        top: 0; transform: rotate(-45deg);
-    }
-
-    #header .nav {
-        position:absolute; top:100%; right:0; z-index:9999999;
-        background: #fff; width: 200px;
-        padding: 10px 0px 20px;
-        display: none;
-    }
-    #header .nav.on {
-        display: block;
-    }
-
-    #header .nav .depth1 > li {
-        float:none; position:relative;
-    }
-
-    #header .nav .depth1 > li > a { 
-        display:block; padding:15px 20px;
-        font-size:17px; text-align:left;
-        font-weight:bold
-    }
-
-    .depth2 { position:static;
-        top:100%;
-        width:140%;
-        left:50%;  /* static으로 인해 여기까진 무시됨 */
-        transform:translate(0%);
-        text-align:left; background:#fff; font-size:12px;
-        height:0; overflow:hidden; 
-        transition:all 0.5s;
-        /* display: none; */
-    }
-
-
-    #header .nav .depth2 > li > a { 
-        display:block; padding:13px 30px;
-        font-weight:bold;
-        
-    }
-
-
-/* 전체괄호 */
+/* #header .row { position: relative; } */
+#header .open,
+#header .close {
+    display: block;
+    position: absolute;
+    top: 50%; right: 30px;
 }
+#header .close { display: none; }
+#header .open button,
+#header .close button {
+    font-size: 25px;
+    color: #000;
+    background: none;
+    border: none;
+}
+
+#header #nav {  
+    position:absolute; top:100%;  z-index:999999;
+    transform:translateY(0%);
+    background: #fff; width: 150px;
+    right:0;
+    font-size:18px; color:#1e1e1e;
+    display: none;
+}
+
+#header .nav.on {
+    display: block;
+}
+
+#header .nav .depth1 > li {
+    float:none;
+    position:relative;
+}
+#header #nav .depth1 > li > a {
+    padding:20px 40px;
+    display:inline-block;
+}
+
+#header .depth2 {
+    position:static; top:100%; left:0; 
+    background:#555; font-size:14px;
+    color:#fff;
+    width:100%;
+    text-align:center;
+    overflow:hidden;
+    transition:all 0.5s;
+    display:none;
+}
+
+
+} /* 마지막괄호 */
