--- a/css/index.css
+++ b/css/index.css
@@ -1,49 +1,13 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
-
-body{font-family: 'Noto Sans KR', sans-serif; color:#666; font-size:15px }
-.row{max-width: 1200px; margin:0 auto; padding:0 10px }
-#header .top_menu { background:#f3f3f3; color:#999; font-size:12px; text-align:right; }
-#header .top_menu a { padding:7px 20px; display:inline-block; border-right:1px solid #e3e3e3; }
-#header .top_menu a:first-child { border-left:1px solid #e3e3e3; }
-#header .top_menu a:hover { color: #dbb075; }
-
-/* 블록요소들을 한줄로 정렬하는 방법 : 
-   1. 둘다 float정렬 : 부모한테 .cf나 overflow:hidden
-   2. 둘 중에 높이가 낮은 자식을 position:absolute 정렬 : 부모한테 position:relative */
-#header > .row { position:relative; }
-#header h1 { /* float:left;  */ padding:25px 0 }
-
-#header .open,
-#header .close { display: none; }
-
-#header #nav {  /* float:right; */ z-index:99999;
-    position:absolute; top:50%; transform:translateY(-50%);
-    right:0; font-size:18px; color:#1e1e1e; /* background:red; */ }
-#header #nav .depth1 > li { float:left; position:relative; }
-#header #nav .depth1 > li > a { padding:20px 40px; display:inline-block; }
-#header #nav .depth1 > li.on > a { color: #00529b; }
-
-
-#header .depth2 { position:absolute; top:100%; left:0; 
-    background:#555; font-size:14px;
-    color:#fff; width:100%; text-align:center; 
-    display:none; }
-
-#header #nav .depth1 > li.on > .depth2 { display:block; }
-
-#header .depth2 > li > a { padding:18px 0; display:block; 
-    border-bottom:1px solid #999; }
-#header .depth2 > li:last-child > a { border-bottom:none }
-#header .depth2 > li:hover > a { background:#00529b; color:#dfe9fe }
 
 .article1 { position:relative }
 .article1 .slide-group { position:relative }
 .article1 .plpa {
-    position: absolute; bottom: 44px; left: 50%;
-    /* margin-left: 170px; */
-    transform: translate(180px);
-    color: #fff; border: none; background: none; font-size: 20px;
+    position:absolute; bottom:44px; left:50%; 
+    /* margin-left:180px;  */
+    transform:translate(180px);
+    color:#fff; border:none;
+    background:none; font-size:20px;
 }
 .article1 .slide-group .slick-arrow {
     position:absolute; top:50%; transform:translateY(-50%);
@@ -107,20 +71,20 @@ body{font-family: 'Noto Sans KR', sans-serif; color:#666; font-size:15px }
     padding:80px 0 10px; text-align:center; }
 .article2 > p, .article4 > p  { padding-bottom: 40px; text-align:center; }
 .article2 li { height:520px; float:left; width:24%; margin-right:1.3333%; color:#fff;
-    position:relative; }
+    position:relative; 
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size:cover;
+}
 .article2 li::before { content:'';
     position:absolute; top:0; bottom:0; right:0; left:0;
     background:rgba(0,0,0,0.5); opacity:0; transition:all 0.4s
 }   
 .article2 li:hover::before {  opacity:1; }    
-.article2 li:nth-child(1) { background:url(../img/what1.jpg) no-repeat center;
-    background-size:cover; }
-.article2 li:nth-child(2) { background:url(../img/what2.jpg) no-repeat center;
-    background-size:cover; }
-.article2 li:nth-child(3) { background:url(../img/what3.jpg) no-repeat center;
-    background-size:cover; }
-.article2 li:nth-child(4) { background:url(../img/what4.jpg) no-repeat center;
-    background-size:cover; margin-right:0; }
+.article2 li:nth-child(1) { background-image:url(../img/what1.jpg) }
+.article2 li:nth-child(2) { background-image:url(../img/what2.jpg) }
+.article2 li:nth-child(3) { background-image:url(../img/what3.jpg) }
+.article2 li:nth-child(4) { background-image:url(../img/what4.jpg); margin-right:0; }
 .article2 li > div { position:absolute; bottom:25px; left:25px; 
     right:25px; transition:all 0.4s }
 .article2 li:hover > div { bottom:100px;  }
@@ -232,42 +196,16 @@ font-size:30px; color:#fff; opacity:0; transition:all 0.4s 0.2s; }
 
 .article5 .row div.cs_movie { padding-left:30px; }
 /* 유튜브 동영상 스타일 공식 */
-.article5 .cs_movie .tubewrap {
+/* .article5 .cs_movie .tubewrap {
     width:100%; padding-top:56.25%; 
     position:relative; 
 }
 .article5 .cs_movie .tubewrap iframe {
     position:absolute; top:0; left:0;
-}
+} */
 
 
 
 
 
 
-#footer { margin-top:0px; background: #333;
-    padding: 30px 0px; text-align: center;
-    font-size: 12px; line-height: 18px;
-    color:#ddd; }
-#footer .sns a { font-size:14px; display:inline-block;
-    width:32px; height:32px; line-height:32px;
-    background:rgba(255,255,255,0.1);
-    border-radius:50%;
-    margin:0 5px; transition:all 0.3s }
-#footer .sns a:hover {
-    background:rgba(255,255,255,0.3);
-}
-
-#footer .info { padding:20px 0px }
-#footer .info span { padding:5px 20px; }
-#footer .privacy a {
-    font-size:11px; padding:3px 10px;
-    display:inline-block;
-    border: 1px solid rgba(255,255,255,0.5);
-    color:#bbb; transition:all 0.4s;
-}
-#footer .privacy a:hover {
-    background: #999;
-    border: 1px solid #999;
-    color: #FFF;
-}
